# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
cmake/: utils.cmake
examples/: CMakeLists.txt
examples/hello_triangle/: CMakeLists.txt  default.vert  main.cpp
foundation/: CMakeLists.txt  ebo.cpp  ebo.h  error.c  error.h  file_utils.cpp  file_utils.h  pipeline.cpp  pipeline.h  shader.cpp  shader.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/: main.cpp
